--- a/styles/layouts/chatbox.css
+++ b/styles/layouts/chatbox.css
@@ -22,6 +22,7 @@
   z-index: 1000;
   transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1); /* Transición suave para las propiedades que cambian */
   animation: floatAnimation 4s ease-in-out infinite; /* Animación de flotación */
+  cursor: pointer;
 }
 
 .whatsapp-float::before {
