Corrigiendo y agregando los enlaces actualizados correspondientes...

--- a/styles/layouts/footer.css
+++ b/styles/layouts/footer.css
@@ -108,7 +108,8 @@
   gap: 10px;
 }
 
-.footer-container-link a {
+.footer-container-link a,
+.footer-container-link i {
   color: #ffffff;
   font-size: 13px;
   text-decoration: none;
